Add note about "illegal reflective access" warnings